# cbrt

./: CMakeLists.txt  main.cpp
Core/: GameSettings.cpp  GameSettings.h  Minecraft.cpp  Minecraft.h
Headers/glad/: glad.h
Libraries/: glad.c
Renderer/: FontRenderer.cpp  FontRenderer.h  RenderEngine.cpp  RenderEngine.h  ScaledResolution.cpp  ScaledResolution.h
